--- a/index.html
+++ b/index.html
@@ -2,20 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Simply chocolate</title>
+    <title>Simply Chocolate</title>
   </head>
   <body>
     <header>
       <nav>
-        <a href=""
-          >Simply Chocolate
-          <img
-            src="./images/chocolate-min.jpg"
-            alt="logo"
-            width="24"
-            height="24"
+        <a href="">
+          SIMPLY CHOCOLATE <img src="./images/logo-icon.svg" alt="logo icon"
         /></a>
         <ul>
           <li><a href="/">Home</a></li>
@@ -44,7 +38,6 @@
         </li>
       </ul>
     </header>
-    <!-- Section 1-->
     <main>
       <section>
         <h1>
@@ -53,10 +46,10 @@
         </h1>
         <button type="button">Buy now</button>
         <a href="#made">How it’s made</a>
-        <a href="#fotter">Scroll down></a>
+        <a href="#footer">scroll down</a>
       </section>
-      <!-- Section 2-->
       <section>
+        <h2 hidden>Advantages</h2>
         <ul>
           <li>
             <h3>Unsurpassed taste</h3>
@@ -88,7 +81,6 @@
           </li>
         </ul>
       </section>
-      <!--Section 3-->
       <section>
         <h2>IT ALL ADDS UP TO ONE EXCEPTIONAL TASTE SENSATION</h2>
         <p>
@@ -99,47 +91,38 @@
         </p>
         <ul>
           <li>
-            <img src="./images/milk.jpg" alt="milk" width="206" height="160" />
+            <img
+              src="./images/milk-chocolate.png"
+              alt="milk-chocolate"
+              width="206"
+              height="160"
+            />
+            <h3>mILK CHOCOLATE</h3>
+          </li>
+          <li>
+            <img src="./images/milk.png" alt="milk" width="206" height="160" />
             <h3>Milk</h3>
           </li>
           <li>
+            <img src="./images/nuts.png" alt="nuts" width="206" height="160" />
+            <h3>nuts</h3>
+          </li>
+          <li>
             <img
-              src="./images/chocolate.jpg"
-              alt="chocolate"
+              src="./images/semi-sweet-choc.png"
+              alt="semi sweetchocolate"
               width="206"
               height="160"
             />
-            <h3>Chocolate</h3>
-          </li>
-          <li>
-            <img src="./images/nuts.jpg" alt="nuts" width="206" height="160" />
-          </li>
-          <li>
-            <img
-              src="./images/semi-chocolate.jpg"
-              alt="semi-chocolate"
-              width="206"
-              height="106"
-            />
-            <h3>Nuts</h3>
-          </li>
-          <li>
-            <img
-              src="/images/semi-chocolate.jpg"
-              alt="Semi-Sweet-chocolate"
-              width="206"
-              height="160"
-            />
-            <h3>Semi-Sweet-chocolate</h3>
+            <h3>sEMI - SWEET CHOCOLATE</h3>
           </li>
         </ul>
       </section>
-      <!-- Section 4-->
       <section id="made">
         <h2>hOW IT’S made?</h2>
         <img
-          src="./images/chocolate-process.jpg"
-          alt="Chocolate-Process"
+          src="./images/chocolate.jpeg"
+          alt="liquid chocolate"
           width="600"
           height="400"
         />
@@ -176,13 +159,12 @@
           </li>
         </ul>
       </section>
-      <!--Section 5-->
       <section id="loved">
         <h2>chocolate is loved</h2>
         <ul>
           <li>
             <img
-              src="/images/victoria.jpg"
+              src="./images/viktoria.jpeg"
               alt="Victoria Dobrzhanska"
               width="80"
               height="80"
@@ -195,7 +177,7 @@
           </li>
           <li>
             <img
-              src="/images/nazar.jpg"
+              src="./images/nazar.jpeg"
               alt="Nazar Babenko"
               width="80"
               height="80"
@@ -209,7 +191,7 @@
           </li>
           <li>
             <img
-              src="/images/olena.jpg"
+              src="./images/olena.jpeg"
               alt="Olena Kampusch"
               width="80"
               height="80"
@@ -224,26 +206,25 @@
         </ul>
         <button type="button">Leave a review</button>
       </section>
-      <!--Footer-->
-      <footer>
-        <p>Chocolate a delicious cure for a bad day</p>
-        <p>Contact us</p>
-        <address>
-          <ul>
-            <li><a href="tel:+380684439426">+380 (68) 443-94-26</a></li>
-            <li>
-              <a href="mailto:simplychoc@gmail.com">simplychoc@gmail.com</a>
-            </li>
-          </ul>
-        </address>
-        <nav>
-          <ul>
-            <li><a href="">Home</a></li>
-            <li><a href="#made">How it’s made?</a></li>
-            <li><a href="#loved">Chocolate is loved</a></li>
-          </ul>
-        </nav>
-      </footer>
     </main>
+    <footer id="footer" class="footer">
+      <p>Chocolate a delicious cure for a bad day</p>
+      <p>Contact us</p>
+      <address>
+        <ul>
+          <li><a href="tel:+380684439426">+380 (68) 443-94-26</a></li>
+          <li>
+            <a href="mailto:simplychoc@gmail.com">simplychoc@gmail.com</a>
+          </li>
+        </ul>
+      </address>
+      <nav>
+        <ul>
+          <li><a href="">Home</a></li>
+          <li><a href="#made">How it’s made?</a></li>
+          <li><a href="#loved">Chocolate is loved</a></li>
+        </ul>
+      </nav>
+    </footer>
   </body>
 </html>
