--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     <header>
       <nav>
         <a href="">
-          SIMPLY CHOCOLATE <img src="./images/logo-icon.svg" alt="logo icon"
+          SIMPLY CHOCOLATE
+          <img src="./images/chocolate-min.jpg" alt="logo icon"
         /></a>
         <ul>
           <li><a href="/">Home</a></li>
@@ -92,7 +93,7 @@
         <ul>
           <li>
             <img
-              src="./images/milk-chocolate.png"
+              src="./images/chocolate.jpg"
               alt="milk-chocolate"
               width="206"
               height="160"
@@ -100,16 +101,16 @@
             <h3>mILK CHOCOLATE</h3>
           </li>
           <li>
-            <img src="./images/milk.png" alt="milk" width="206" height="160" />
+            <img src="./images/milk.jpg" alt="milk" width="206" height="160" />
             <h3>Milk</h3>
           </li>
           <li>
-            <img src="./images/nuts.png" alt="nuts" width="206" height="160" />
+            <img src="./images/nuts.jpg" alt="nuts" width="206" height="160" />
             <h3>nuts</h3>
           </li>
           <li>
             <img
-              src="./images/semi-sweet-choc.png"
+              src="./images/semi-chocolate.jpg"
               alt="semi sweetchocolate"
               width="206"
               height="160"
@@ -121,7 +122,7 @@
       <section id="made">
         <h2>hOW IT’S made?</h2>
         <img
-          src="./images/chocolate.jpeg"
+          src="./images/chocolate-process.jpg"
           alt="liquid chocolate"
           width="600"
           height="400"
@@ -164,7 +165,7 @@
         <ul>
           <li>
             <img
-              src="./images/viktoria.jpeg"
+              src="./images/victoria.jpg"
               alt="Victoria Dobrzhanska"
               width="80"
               height="80"
@@ -177,7 +178,7 @@
           </li>
           <li>
             <img
-              src="./images/nazar.jpeg"
+              src="./images/nazar.jpg"
               alt="Nazar Babenko"
               width="80"
               height="80"
@@ -191,7 +192,7 @@
           </li>
           <li>
             <img
-              src="./images/olena.jpeg"
+              src="./images/olena.jpg"
               alt="Olena Kampusch"
               width="80"
               height="80"
