--- a/index.html
+++ b/index.html
@@ -3,229 +3,112 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Simply Chocolate</title>
+    <title>Document</title>
   </head>
   <body>
-    <header>
-      <nav>
-        <a href="">
-          SIMPLY CHOCOLATE
-          <img src="./images/chocolate-min.jpg" alt="logo icon"
-        /></a>
-        <ul>
-          <li><a href="/">Home</a></li>
-          <li><a href="#made">How it’s made?</a></li>
-          <li><a href="#loved">Chocolate is loved</a></li>
-        </ul>
-      </nav>
+    <main>
+      <header>
+        <h3><a href="">WEBSTUDIO</a></h3>
+        <nav>
+          <a href="">Studio</a>
+          <a href="">Portfolio</a>
+          <a href="">Contacts</a>
+        </nav>
+      </header>
+      <address>
+        <a href="mailto:info@devstudio.com@">info@devstudio.com </a>
+        <a href="tel:+110001111111">+11 (00) 111-11-11</a>
+      </address>
+      <!--Section 1-->
+      <h1>Effective Solutions for Your Business</h1>
+      <button type="button">Order Service</button>
+      <!--Section 2-->
       <ul>
         <li>
-          <a
-            href=""
-            aria-label="instagram"
-            target="_blank"
-            rel="noopener noreferrer"
-            >insta</a
-          >
+          <h3>Strategy</h3>
+          <p>
+            Our goal is to identify the business problem to walk away with the
+            perfect and creative solution.
+          </p>
         </li>
         <li>
-          <a
-            href=""
-            aria-label="twitter"
-            target="_blank"
-            rel="noopener noreferrer"
-            >twit</a
-          >
+          <h3>Punctuality</h3>
+          <p>
+            Bring the key message to the brand's audience for the best price
+            within the shortest possible time.
+          </p>
+        </li>
+        <li>
+          <h3>Diligence</h3>
+          <p>
+            Research and confirm brands that present the strongest digital
+            growth opportunities and minimize risk.
+          </p>
+        </li>
+        <li>
+          <h3>Technologies</h3>
+          <p>
+            Design practice focused on digital experiences. We bring forth a
+            deep passion for problem-solving.
+          </p>
         </li>
       </ul>
-    </header>
-    <main>
-      <section>
-        <h1>
-          Treat yourself or a loved one to our finest ingredients for a moment
-          of pure delight!
-        </h1>
-        <button type="button">Buy now</button>
-        <a href="#made">How it’s made</a>
-        <a href="#footer">scroll down</a>
-      </section>
-      <section>
-        <h2 hidden>Advantages</h2>
-        <ul>
-          <li>
-            <h3>Unsurpassed taste</h3>
-            <p>
-              Crafted with the finest quality cocoa beans and a dedication to
-              perfection, each bite is a decadent experience that simply cannot
-              be matched. Savor the richness and complexity of our Unsurpassed
-              Taste and discover a new level of chocolate bliss.
-            </p>
-          </li>
-          <li>
-            <h3>Affordable price</h3>
-            <p>
-              Indulge in high-quality chocolate without breaking the bank with
-              Simply Chocolate's selection of affordable treats. Enjoy
-              mouth-watering truffles and velvety chocolate bars without
-              sacrificing taste or quality. Browse our selection and indulge in
-              affordable luxury today.
-            </p>
-          </li>
-          <li>
-            <h3>Own production</h3>
-            <p>
-              We take pride in our own production process, ensuring that every
-              step is carefully crafted to perfection. From selecting the finest
-              ingredients to handcrafting each piece, our attention to detail is
-              evident in every bite.
-            </p>
-          </li>
-        </ul>
-      </section>
-      <section>
-        <h2>IT ALL ADDS UP TO ONE EXCEPTIONAL TASTE SENSATION</h2>
-        <p>
-          At Simply Chocolate, we believe that the secret to exceptional
-          chocolate is in the details. From the sourcing of the finest
-          ingredients to the careful crafting of each individual piece, every
-          step of our process adds up to one exceptional taste sensation.
-        </p>
-        <ul>
-          <li>
-            <img
-              src="./images/chocolate.jpg"
-              alt="milk-chocolate"
-              width="206"
-              height="160"
-            />
-            <h3>mILK CHOCOLATE</h3>
-          </li>
-          <li>
-            <img src="./images/milk.jpg" alt="milk" width="206" height="160" />
-            <h3>Milk</h3>
-          </li>
-          <li>
-            <img src="./images/nuts.jpg" alt="nuts" width="206" height="160" />
-            <h3>nuts</h3>
-          </li>
-          <li>
-            <img
-              src="./images/semi-chocolate.jpg"
-              alt="semi sweetchocolate"
-              width="206"
-              height="160"
-            />
-            <h3>sEMI - SWEET CHOCOLATE</h3>
-          </li>
-        </ul>
-      </section>
-      <section id="made">
-        <h2>hOW IT’S made?</h2>
-        <img
-          src="./images/chocolate-process.jpg"
-          alt="liquid chocolate"
-          width="600"
-          height="400"
-        />
-        <p>
-          Try our chocolates today and discover the perfect balance of flavor
-        </p>
-        <ul>
-          <li>
-            <p>
-              Heat the milk in a saucepan without bringing it to a boil. Add
-              sugar and cocoa powder.
-            </p>
-          </li>
-          <li>
-            <p>
-              At the same time, prepare a water bath. Melt the butter on it.
-            </p>
-          </li>
-          <li>
-            <p>
-              "Mix" the milk mixture and already liquid butter. Mix thoroughly
-              with a silicone spatula so that the mass becomes uniform and
-              silky.
-            </p>
-          </li>
-          <li>
-            <p>Heat the mixture over low heat, letting it barely boil.</p>
-          </li>
-          <li>
-            <p>
-              Pour the chocolate into special containers (can be replaced with
-              ice molds). Allow to cool and harden.
-            </p>
-          </li>
-        </ul>
-      </section>
-      <section id="loved">
-        <h2>chocolate is loved</h2>
-        <ul>
-          <li>
-            <img
-              src="./images/victoria.jpg"
-              alt="Victoria Dobrzhanska"
-              width="80"
-              height="80"
-            />
-            <h3>Victoria Dobrzhanska</h3>
-            <p>
-              I love this chocolate bar. Perfect combination of light crispy
-              wafer, covered in a thin layer chocolate.
-            </p>
-          </li>
-          <li>
-            <img
-              src="./images/nazar.jpg"
-              alt="Nazar Babenko"
-              width="80"
-              height="80"
-            />
-            <h3>Nazar Babenko</h3>
-            <p>
-              This chocolate confection is a delight! A delight! The wafer is
-              light and crisp, the hazelnut cream is smooth, and the chocolate
-              is good.
-            </p>
-          </li>
-          <li>
-            <img
-              src="./images/olena.jpg"
-              alt="Olena Kampusch"
-              width="80"
-              height="80"
-            />
-            <h3>Olena Kampusch</h3>
-            <p>
-              Chocolate is a family favourite treat. Love the delicious smooth
-              chocolate and the creaminess inside. The wafer is soft but
-              crunchy.
-            </p>
-          </li>
-        </ul>
-        <button type="button">Leave a review</button>
-      </section>
+      <!--Section 3-->
+      <h2>What are we doing</h2>
+      <img src="/images/computer.jpg" alt="Computer" width="360" height="300" />
+      <img src="/images/phone.jpg" alt="Phones" width="360" height="300" />
+      <img
+        src="/images/phone-note.jpg"
+        alt="Phone-and-notebook"
+        width="360"
+        height="300"
+      />
+      <!--Section 4-->
+      <h2>Our Team</h2>
+      <ul>
+        <li>
+          <img
+            src="/images/mark.jpg"
+            alt="Mark Guerrero"
+            width="264"
+            height="260"
+          />
+          <h3>Mark Guerrero</h3>
+          <p>Product Designer</p>
+        </li>
+        <li>
+          <img src="/images/tom.jpg" alt="Tom Ford" width="264" height="260" />
+          <h3>Tom Ford</h3>
+          <p>Frontend Developer</p>
+        </li>
+        <li>
+          <img
+            src="/images/camila.jpg"
+            alt="Camila Garcia"
+            width="264"
+            height="260"
+          />
+          <h3>Camila Garcia</h3>
+          <p>Marketing</p>
+        </li>
+        <li>
+          <img
+            src="/images/daniel.png"
+            alt="Daniel Wilson"
+            width="264"
+            height="260"
+          />
+          <h3>Daniel Wilson</h3>
+          <p>UI Designer</p>
+        </li>
+      </ul>
     </main>
-    <footer id="footer" class="footer">
-      <p>Chocolate a delicious cure for a bad day</p>
-      <p>Contact us</p>
-      <address>
-        <ul>
-          <li><a href="tel:+380684439426">+380 (68) 443-94-26</a></li>
-          <li>
-            <a href="mailto:simplychoc@gmail.com">simplychoc@gmail.com</a>
-          </li>
-        </ul>
-      </address>
-      <nav>
-        <ul>
-          <li><a href="">Home</a></li>
-          <li><a href="#made">How it’s made?</a></li>
-          <li><a href="#loved">Chocolate is loved</a></li>
-        </ul>
-      </nav>
+    <footer>
+      <h3><a href="">WEBSTUDIO</a></h3>
+      <p>
+        Increase the flow of customers and sales for your business with digital
+        marketing & growth solutions.
+      </p>
     </footer>
   </body>
 </html>
