--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
     <title>WebStudio</title>
   </head>
   <body>
-    <main>
       <header>
-        <h3><a href="">WEBSTUDIO</a></h3>
+        <h3><a href="/index.html">WEBSTUDIO</a></h3>
         <nav>
           <a href="">Studio</a>
           <a href="">Portfolio</a>
           <a href="">Contacts</a>
         </nav>
+        <main>
       </header>
       <address>
         <a href="mailto:info@devstudio.com@">info@devstudio.com </a>
