--- a/index.html
+++ b/index.html
@@ -6,23 +6,28 @@
     <title>WebStudio</title>
   </head>
   <body>
-      <header>
+    <header>
+      <nav>
         <h3><a href="/index.html">WEBSTUDIO</a></h3>
-        <nav>
-          <a href="">Studio</a>
-          <a href="">Portfolio</a>
-          <a href="">Contacts</a>
-        </nav>
-        <main>
-      </header>
+        <ul>
+          <li><a href="">Studio</a></li>
+          <li><a href="">Portfolio</a></li>
+          <li><a href="">Contacts</a></li>
+        </ul>
+      </nav>
       <address>
-        <a href="mailto:info@devstudio.com@">info@devstudio.com </a>
-        <a href="tel:+110001111111">+11 (00) 111-11-11</a>
+        <ul>
+          <li><a href="mailto:info@devstudio.com@">info@devstudio.com</a></li>
+          <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+        </ul>
       </address>
+    </header>
+    <main>
       <!--Section 1-->
       <h1>Effective Solutions for Your Business</h1>
       <button type="button">Order Service</button>
       <!--Section 2-->
+      <h2 hidden>Advantages</h2>
       <ul>
         <li>
           <h3>Strategy</h3>
@@ -55,56 +60,54 @@
       </ul>
       <!--Section 3-->
       <h2>What are we doing</h2>
-      <img src="/images/computer.jpg" alt="Computer" width="360" height="300" />
-      <img src="/images/phone.jpg" alt="Phones" width="360" height="300" />
-      <img
-        src="/images/phone-note.jpg"
-        alt="Phone-and-notebook"
-        width="360"
-        height="300"
-      />
+      <ul>
+        <li>
+          <img
+            src="/images/computer.jpg"
+            alt="Computer"
+            width="360"
+            height="300"
+          />
+        </li>
+        <li>
+          <img src="/images/phone.jpg" alt="Phones" width="360" height="300" />
+        </li>
+        <li>
+          <img
+            src="/images/phone-note.jpg"
+            alt="Phone-and-notebook"
+            width="360"
+            height="300"
+          />
+        </li>
+      </ul>
       <!--Section 4-->
       <h2>Our Team</h2>
       <ul>
         <li>
-          <img
-            src="/images/mark.jpg"
-            alt="Mark Guerrero"
-            width="264"
-            height="260"
-          />
+          <img src="/images/mark.jpg" alt="Mark Guerrero" width="264" />
           <h3>Mark Guerrero</h3>
           <p>Product Designer</p>
         </li>
         <li>
-          <img src="/images/tom.jpg" alt="Tom Ford" width="264" height="260" />
+          <img src="/images/tom.jpg" alt="Tom Ford" width="264" />
           <h3>Tom Ford</h3>
           <p>Frontend Developer</p>
         </li>
         <li>
-          <img
-            src="/images/camila.jpg"
-            alt="Camila Garcia"
-            width="264"
-            height="260"
-          />
+          <img src="/images/camila.jpg" alt="Camila Garcia" width="264" />
           <h3>Camila Garcia</h3>
           <p>Marketing</p>
         </li>
         <li>
-          <img
-            src="/images/daniel.png"
-            alt="Daniel Wilson"
-            width="264"
-            height="260"
-          />
+          <img src="/images/daniel.png" alt="Daniel Wilson" width="264" />
           <h3>Daniel Wilson</h3>
           <p>UI Designer</p>
         </li>
       </ul>
     </main>
     <footer>
-      <h3><a href="">WEBSTUDIO</a></h3>
+      <h3><a href="/index.html">WEBSTUDIO</a></h3>
       <p>
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
