--- a/index.html
+++ b/index.html
@@ -24,87 +24,100 @@
     </header>
     <main>
       <!--Section 1-->
-      <h1>Effective Solutions for Your Business</h1>
-      <button type="button">Order Service</button>
+      <section>
+        <h1>Effective Solutions for Your Business</h1>
+        <button type="button">Order Service</button>
+      </section>
       <!--Section 2-->
-      <h2 hidden>Advantages</h2>
-      <ul>
-        <li>
-          <h3>Strategy</h3>
-          <p>
-            Our goal is to identify the business problem to walk away with the
-            perfect and creative solution.
-          </p>
-        </li>
-        <li>
-          <h3>Punctuality</h3>
-          <p>
-            Bring the key message to the brand's audience for the best price
-            within the shortest possible time.
-          </p>
-        </li>
-        <li>
-          <h3>Diligence</h3>
-          <p>
-            Research and confirm brands that present the strongest digital
-            growth opportunities and minimize risk.
-          </p>
-        </li>
-        <li>
-          <h3>Technologies</h3>
-          <p>
-            Design practice focused on digital experiences. We bring forth a
-            deep passion for problem-solving.
-          </p>
-        </li>
-      </ul>
+      <section>
+        <h2 hidden>Advantages</h2>
+        <ul>
+          <li>
+            <h3>Strategy</h3>
+            <p>
+              Our goal is to identify the business problem to walk away with the
+              perfect and creative solution.
+            </p>
+          </li>
+          <li>
+            <h3>Punctuality</h3>
+            <p>
+              Bring the key message to the brand's audience for the best price
+              within the shortest possible time.
+            </p>
+          </li>
+          <li>
+            <h3>Diligence</h3>
+            <p>
+              Research and confirm brands that present the strongest digital
+              growth opportunities and minimize risk.
+            </p>
+          </li>
+          <li>
+            <h3>Technologies</h3>
+            <p>
+              Design practice focused on digital experiences. We bring forth a
+              deep passion for problem-solving.
+            </p>
+          </li>
+        </ul>
+      </section>
       <!--Section 3-->
-      <h2>What are we doing</h2>
-      <ul>
-        <li>
-          <img
-            src="/images/computer.jpg"
-            alt="Computer"
-            width="360"
-            height="300"
-          />
-        </li>
-        <li>
-          <img src="/images/phone.jpg" alt="Phones" width="360" height="300" />
-        </li>
-        <li>
-          <img
-            src="/images/phone-note.jpg"
-            alt="Phone-and-notebook"
-            width="360"
-            height="300"
-          />
-        </li>
-      </ul>
+      <section>
+        <h2>What are we doing</h2>
+        <ul>
+          <li>
+            <img
+              src="/images/computer.jpg"
+              alt="Computer"
+              width="360"
+              height="300"
+            />
+          </li>
+          <li>
+            <img
+              src="/images/phone.jpg"
+              alt="Phones"
+              width="360"
+              height="300"
+            />
+          </li>
+          <li>
+            <img
+              src="/images/phone-note.jpg"
+              alt="Phone-and-notebook"
+              width="360"
+              height="300"
+            />
+          </li>
+        </ul>
+      </section>
       <!--Section 4-->
-      <h2>Our Team</h2>
-      <ul>
-        <li>
-          <img src="/images/mark.jpg" alt="Mark Guerrero" width="264" />
-          <h3>Mark Guerrero</h3>
-          <p>Product Designer</p>
-        </li>
-        <li>
-          <img src="/images/tom.jpg" alt="Tom Ford" width="264" />
-          <h3>Tom Ford</h3>
-          <p>Frontend Developer</p>
-        </li>
-        <li>
-          <img src="/images/camila.jpg" alt="Camila Garcia" width="264" />
-          <h3>Camila Garcia</h3>
-          <p>Marketing</p>
-        </li>
-        <li>
-          <img src="/images/daniel.png" alt="Daniel Wilson" width="264" />
-          <h3>Daniel Wilson</h3>
-          <p>UI Designer</p>
-        </li>
-      </ul>
+      <section>
+        <h2>Our Team</h2>
+        <ul>
+          <li>
+            <img src="/images/mark.jpg" alt="Mark Guerrero" width="264" />
+            <h3>Mark Guerrero</h3>
+            <p>Product Designer</p>
+          </li>
+          <li>
+            <img src="/images/tom.jpg" alt="Tom Ford" width="264" />
+            <h3>Tom Ford</h3>
+            <p>Frontend Developer</p>
+          </li>
+          <li>
+            <img src="/images/camila.jpg" alt="Camila Garcia" width="264" />
+            <h3>Camila Garcia</h3>
+            <p>Marketing</p>
+          </li>
+          <li>
+            <img src="/images/daniel.png" alt="Daniel Wilson" width="264" />
+            <h3>Daniel Wilson</h3>
+            <p>UI Designer</p>
+          </li>
+        </ul>
+      </section>
     </main>
     <footer>
       <h3><a href="/index.html">WEBSTUDIO</a></h3>
