--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body>
     <header>
       <nav>
-        <h3><a href="/index.html">WEBSTUDIO</a></h3>
+        <h3><a href="./index.html">WEBSTUDIO</a></h3>
         <ul>
           <li><a href="">Studio</a></li>
           <li><a href="">Portfolio</a></li>
@@ -17,7 +17,7 @@
       </nav>
       <address>
         <ul>
-          <li><a href="mailto:info@devstudio.com@">info@devstudio.com</a></li>
+          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
           <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
         </ul>
       </address>
@@ -67,27 +67,16 @@
         <h2>What are we doing</h2>
         <ul>
           <li>
-            <img
-              src="/images/computer.jpg"
-              alt="Computer"
-              width="360"
-              height="300"
-            />
+            <img src="./images/computer.jpg" alt="Computer" width="360" />
+          </li>
+          <li>
+            <img src="./images/phone.jpg" alt="Phones" width="360" />
           </li>
           <li>
             <img
-              src="/images/phone.jpg"
-              alt="Phones"
-              width="360"
-              height="300"
-            />
-          </li>
-          <li>
-            <img
-              src="/images/phone-note.jpg"
+              src="./images/phone-note.jpg"
               alt="Phone-and-notebook"
               width="360"
-              height="300"
             />
           </li>
         </ul>
@@ -120,7 +109,7 @@
       </section>
     </main>
     <footer>
-      <h3><a href="/index.html">WEBSTUDIO</a></h3>
+      <h3><a href="./index.html">WEBSTUDIO</a></h3>
       <p>
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
