--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body>
     <header>
       <nav>
-        <h3><a href="./index.html">WEBSTUDIO</a></h3>
+        <a href="./index.html">WEBSTUDIO</a>/>
         <ul>
           <li><a href="">Studio</a></li>
           <li><a href="">Portfolio</a></li>
@@ -101,7 +101,7 @@
             <p>Marketing</p>
           </li>
           <li>
-            <img src="./images/daniel.png" alt="Daniel Wilson" width="264" />
+            <img src="./images/daniel.jpg" alt="Daniel Wilson" width="264" />
             <h3>Daniel Wilson</h3>
             <p>UI Designer</p>
           </li>
@@ -109,7 +109,7 @@
       </section>
     </main>
     <footer>
-      <h3><a href="./index.html">WEBSTUDIO</a></h3>
+      <a href="./index.html">WEBSTUDIO</a>
       <p>
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
